# matrix-release

./: README.md
cuda/: matrixMul.cu  multMaxCuda.cu
openMD/: CMakeLists.txt  data.out  generator  iterator  main.cpp
